--- a/DealsServerLogging/.classpath
+++ b/DealsServerLogging/.classpath
@@ -28,6 +28,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Vanya/FL/simplecaptcha.jar"/>
+	<classpathentry kind="lib" path="/home/iklymchuk/FL/simplecaptcha.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
