--- a/DealsServerLogging/pom.xml
+++ b/DealsServerLogging/pom.xml
@@ -160,6 +160,13 @@
 			<artifactId>jj-simplecaptcha</artifactId>
 			<version>1.1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>net.tanesha.recaptcha4j</groupId>
+			<artifactId>recaptcha4j</artifactId>
+			<version>0.0.7</version>
+		</dependency>
+		
     </dependencies>
     <properties>
         <org.springframework.version>3.0.6.RELEASE</org.springframework.version>
