--- a/DealsServerLogging/src/main/webapp/WEB-INF/jdbc.properties
+++ b/DealsServerLogging/src/main/webapp/WEB-INF/jdbc.properties
@@ -2,5 +2,5 @@ jdbc.driverClassName= com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
 jdbc.databaseurl=jdbc:mysql://localhost:3306/deals_db
 jdbc.username=root
-jdbc.password=root
+jdbc.password=password
 
