--- a/DealsServerLogging/src/main/webapp/WEB-INF/web.xml
+++ b/DealsServerLogging/src/main/webapp/WEB-INF/web.xml
@@ -28,8 +28,9 @@
 		<servlet-name>spring</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
     <welcome-file-list>
-        <welcome-file>registrationform.jsp</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
     
    
