--- a/DealsServerLogging/pom.xml
+++ b/DealsServerLogging/pom.xml
@@ -167,6 +167,18 @@
 			<version>0.0.7</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>net.sourceforge.dynamicreports</groupId>
+			<artifactId>dynamicreports-core</artifactId>			
+			<version>3.1.3</version>
+		</dependency>
+		
+		 <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>5.0.4</version>      
+        </dependency>
+		
     </dependencies>
     <properties>
         <org.springframework.version>3.0.6.RELEASE</org.springframework.version>
